@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 5.5.0
 ----------------------------------------------------------------------
-  9 Enhancements
+  10 Enhancements
   2 Bug fixes
   0 Localisation updates
 ----------------------------------------------------------------------
@@ -44,6 +44,8 @@
   - Add rudimentary support for dir attribute modification in HTML
   https://sourceforge.net/p/omegat/feature-requests/1556/
 
+  - Support glossaries with TSV extension
+  https://sourceforge.net/p/omegat/feature-requests/1557/
 ----------------------------------------------------------------------
  OmegaT 5.4.1 (2020-12-15)
 ----------------------------------------------------------------------
